--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="#" class="logo">Mon Portfolio</a>
             <div>
-                <a href="#about">À propos de moi</a>
+                <a href="#about">À propos</a>
                 <a href="#couture">Couture</a>
                 <a href="#illustration">Travaux Graphiques</a>
                 <a href="#contact">Contact</a>
@@ -22,8 +22,7 @@
 
     <div class="hero">
         <div>
-            <h1>Bienvenue dans mes créations</h1>
-            <p>Découvrez mes créations uniques en couture ou comme tu veux</p>
+            <h1>Mon Portefolio</h1>
         </div>
     </div>
 
@@ -135,7 +134,7 @@
                 </div>
                 <button class="nav-left" aria-label="Image précédente">&#10094;</button>
                 <button class="nav-right" aria-label="Image suivante">&#10095;</button>
-                <div class="image-description">Panthère 1</div>
+                <div class="image-description"></div>
             </div>
         </div>
 
@@ -174,9 +173,9 @@
     <section id="contact">
         <div class="section-style">
             <h2>Contact</h2>
-            <p>Téléphone : &nbsp; ?<br>
+            <p>Vous pouvez me contacter via : <br>Téléphone :  06.44.04.76.11 &nbsp; <br>
                 <a href="mailto:ellyn.raymond93300@gmail.com">le lien de mon email</a>
-                si le lien ne marche pas : ellyn.raymond93300@gmail.com
+                si le lien ne marche pas :  ellyn.raymond93300@gmail.com
             </p>
         </div>
     </section>
